# mini-ai-1c

./: .gitignore  AGENTS.md  LICENSE  README.md  TASKS.md  how-to-report-an-issue.md  package-lock.json  package.json  skills-lock.json
1c_mcp_ext/: Configuration.xml
1c_mcp_ext/CommonModules/: mcp_Выполнение.xml  mcp_КонтейнерыПовтИсп.xml  mcp_Метаданные.xml  mcp_ОбщегоНазначения.xml  mcp_Содержимое.xml
1c_mcp_ext/DataProcessors/: mcp_ИнструментДанныеОКонфигурации.xml  mcp_УправлениеСервером.xml  (+1 more)
tauri-app/: .gitignore  LICENSE  index.html  overlay.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
tauri-app/mcp-1c-search/: Cargo.toml  README.md
tauri-app/mcp-1c-search/src/: index.rs  main.rs  metadata.rs  search.rs  semantic.rs  tools.rs  workspace.rs
tauri-app/mcp-1c-search/src/parser/: bsl_ast.rs  mod.rs
tauri-app/mcp-1c-tools/: .gitignore  Cargo.toml
tauri-app/mcp-1c-tools/src/: config.rs  main.rs  setup.rs  tools.rs  v8i.rs
tauri-app/mcp-1c-tools/src/cli/: mod.rs
tauri-app/mcp-1c-tools/src/dsl/: form.rs  meta.rs  mod.rs  skd.rs
tauri-app/mcp-1c-tools/src/info/: form.rs  meta.rs  skd.rs
tauri-app/mcp-1c-tools/src/skills/: cf_edit.rs  cf_info.rs  cf_init.rs  cf_validate.rs  cfe_diff.rs  cfe_init.rs  cfe_patch_method.rs  cfe_validate.rs  epf_init.rs  epf_validate.rs  erf_validate.rs  form_add.rs  form_edit.rs  form_patterns.rs  form_remove.rs  form_validate.rs  help_add.rs  interface_edit.rs  meta_edit.rs  meta_remove.rs  meta_validate.rs  mod.rs  mxl_compile.rs  mxl_decompile.rs  mxl_info.rs  role_validate.rs  skd_edit.rs  subsystem_edit.rs  subsystem_info.rs  subsystem_validate.rs  support_edit.rs  template_add.rs  template_remove.rs
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/capabilities/: default.json  overlay.json
tauri-app/src-tauri/icons/: icon.icns
tauri-app/src-tauri/src/: bsl_client.rs  bsl_installer.rs  configurator.rs  crypto.rs  editor_bridge.rs  editor_bridge_installer.rs  history_manager.rs  http_client.rs  job_guard.rs  lib.rs  llm_profiles.rs  logger.rs  main.rs  mcp_client.rs  mouse_hook.rs  scintilla.rs  semantic_bridge.rs  settings.rs
tauri-app/src-tauri/src/ai/: client.rs  codex_client.rs  mod.rs  models.rs  naparnik_client.rs  prompts.rs  tools.rs
tauri-app/src-tauri/src/commands/: ai.rs  bsl.rs  cli.rs  configurator.rs  mcp.rs  mod.rs  overlay.rs  profiles.rs  settings.rs
tauri-app/src-tauri/src/llm/: mod.rs  providers.rs
tauri-app/src-tauri/src/llm/cli_providers/: codex.rs  mod.rs  qwen.rs
tauri-app/src-tauri/wix/: main.wxs
(+153 files in other folders)
