[package]
name = "mcp-1c-search"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mcp-1c-search"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
ignore = "0.4"
rusqlite = { version = "0.31.0", features = ["bundled"] }
tree-sitter = "0.25"
tree-sitter-bsl = { git = "https://github.com/alkoleft/tree-sitter-bsl", tag = "v0.1.4" }
dirs = "5.0.1"
rayon = "1"


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
