[package]
name = "mcp-1c-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.39", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.6.1", features = ["derive"] }
quick-xml = "0.36.0"
regex = "1.10"
uuid = { version = "1.0", features = ["v4"] }