[package]
name = "mini-ai-1c"
version = "1.2.10"
description = "AI-ассистент для разработки на 1С"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mini_ai_1c_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-mcp-bridge = "0.8.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "socks"] }
futures = "0.3"
urlencoding = "2.1"
dirs = "5.0"
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
chrono = { version = "0.4", features = ["serde"] }
tauri-plugin-dialog = "2"
tauri-plugin-window-state = "2"
lazy_static = "1.5.0"
notify = "8.2.0"
async-trait = "0.1.89"
url = "2.5"
keyring = "2"


[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_HiDpi",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_ProcessStatus",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_System_JobObjects",
    "Win32_Security"
] }
clipboard-win = "5.4"
